spacing, total table, indentation, etc
todo
responsive text increases in size when on mobile

--- a/executiveEmailTemplate.html
+++ b/executiveEmailTemplate.html
@@ -1,229 +1,10 @@
+<meta name="viewport" content="width=device-width"/>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>A Simple Responsive HTML Email</title>
-    <style type="text/css">
-        body {
-            margin: 0;
-            padding: 0;
-            min-width: 100% !important;
-        }
 
-        img {
-            height: auto;
-        }
-
-        .content {
-            width: 100%;
-            max-width: 600px;
-        }
-
-        .header {
-            padding: 40px 30px 20px 30px;
-        }
-
-        .innerpadding {
-            padding: 30px 30px 30px 30px;
-        }
-
-        .borderbottom {
-            border-bottom: 1px solid #f2eeed;
-        }
-
-        .subhead {
-            font-size: 15px;
-            color: #ffffff;
-            font-family: sans-serif;
-            letter-spacing: 10px;
-        }
-
-        .h1 {
-            font-family: FreightDispPro-Regular;
-            font-size: 35px;
-            font-weight: bold;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.23;
-            letter-spacing: normal;
-            text-align: center;
-            color: #252525;
-        }
-
-        .h2 {
-            font-family: Arial;
-            font-size: 16px;
-            font-weight: normal;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: normal;
-            letter-spacing: normal;
-            text-align: center;
-            color: #252525;
-        }
-
-        .bodycopy {
-            font-size: 16px;
-            line-height: 22px;
-        }
-
-        .button {
-            text-align: center;
-            font-size: 18px;
-            font-family: sans-serif;
-            font-weight: bold;
-            padding: 0 30px 0 30px;
-        }
-
-        .button a {
-            color: #ffffff;
-            text-decoration: none;
-        }
-
-        .footer {
-            padding: 20px 30px 15px 30px;
-        }
-
-        .footercopy {
-            font-family: Arial;
-            font-size: 16px;
-            font-weight: 500;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.12;
-            letter-spacing: normal;
-            text-align: center;
-            color: #c1ccce;
-        }
-
-        .footercopy a {
-            color: #c1ccce;
-            text-decoration: underline;
-        }
-
-        .takeaways {
-            font-family: Arial;
-            font-size: 16px;
-            font-weight: normal;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.44;
-            letter-spacing: normal;
-            color: #ffffff;
-        }
-
-        .escalations-copy {
-            font-family: Arial;
-            font-size: 25px;
-            font-weight: 500;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.72;
-            letter-spacing: normal;
-            color: #ffffff;
-        }
-
-        .escalations-text {
-            font-family: Arial;
-            font-size: 18px;
-            font-weight: 600;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.25;
-            letter-spacing: normal;
-            padding: 10px;
-            color: #ffffff;
-        }
-
-        .project-burndown-copy {
-            font-family: FreightDispPro-Regular;
-            font-size: 25px;
-            font-weight: bold;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.72;
-            letter-spacing: normal;
-            color: #4a4a4a;
-        }
-
-        .project-burndown-text {
-            font-family: Arial;
-            font-size: 16px;
-            font-weight: normal;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.25;
-            letter-spacing: normal;
-            color: #4a4a4a;
-        }
-
-        .key-takeaways {
-            font-family: Arial;
-            font-size: 15px;
-            font-weight: 500;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 2.87;
-            letter-spacing: 2.3px;
-            text-align: center;
-            color: #ffffff;
-        }
-
-        a {
-            color: #54b4cf;
-        }
-
-        ul {
-            margin: 0 !important;
-            padding: 0 20px;
-            -webkit-margin-before: 0 !important;
-            -webkit-margin-after: 0 !important;
-        }
-
-        @media only screen and (max-device-width: 550px) {
-
-            h2 {
-                font-size: 20px;
-            }
-
-            .escalations-text {
-                font-size: 18px !important;
-            }
-
-            body[yahoo] .hide {
-                display: none !important;
-            }
-
-            body[yahoo] .buttonwrapper {
-                background-color: transparent !important;
-            }
-
-            body[yahoo] .button {
-                padding: 0px !important;
-            }
-
-            body[yahoo] .button a {
-                background-color: #e05443;
-                padding: 15px 15px 13px !important;
-            }
-
-            body[yahoo] .unsubscribe {
-                display: block;
-                margin-top: 20px;
-                padding: 10px 50px;
-                background: #2f3942;
-                border-radius: 5px;
-                text-decoration: none !important;
-                font-weight: bold;
-            }
-        }
-
-        /*@media only screen and (min-device-width: 601px) {
-          .content {width: 600px !important;}
-          .col425 {width: 425px!important;}
-          .col380 {width: 380px!important;}
-          }*/
-    </style>
 </head>
 
 <body yahoo bgcolor="#f4f4f4" style="margin: 0;padding: 0;min-width: 100% !important;">
@@ -602,4 +383,309 @@
     </tr>
 </table>
 </body>
+<style type="text/css">
+    body {
+        margin: 0;
+        padding: 0;
+        min-width: 100% !important;
+    }
+
+    img {
+        height: auto;
+    }
+
+    .content {
+        width: 100%;
+        max-width: 600px;
+    }
+
+    .header {
+        padding: 40px 30px 20px 30px;
+    }
+
+    .innerpadding {
+        padding: 30px 30px 30px 30px;
+    }
+
+    .borderbottom {
+        border-bottom: 1px solid #f2eeed;
+    }
+
+    .subhead {
+        font-size: 15px;
+        color: #ffffff;
+        font-family: sans-serif;
+        letter-spacing: 10px;
+    }
+
+    .h1 {
+        font-family: FreightDispPro-Regular;
+        font-size: 35px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.23;
+        letter-spacing: normal;
+        text-align: center;
+        color: #252525;
+    }
+
+    .h2 {
+        font-family: Arial;
+        font-size: 16px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: center;
+        color: #252525;
+    }
+
+    .bodycopy {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .button {
+        text-align: center;
+        font-size: 18px;
+        font-family: sans-serif;
+        font-weight: bold;
+        padding: 0 30px 0 30px;
+    }
+
+    .button a {
+        color: #ffffff;
+        text-decoration: none;
+    }
+
+    .footer {
+        padding: 20px 30px 15px 30px;
+    }
+
+    .footercopy {
+        font-family: Arial;
+        font-size: 16px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.12;
+        letter-spacing: normal;
+        text-align: center;
+        color: #c1ccce;
+    }
+
+    .footercopy a {
+        color: #c1ccce;
+        text-decoration: underline;
+    }
+
+    .takeaways {
+        font-family: Arial;
+        font-size: 16px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.44;
+        letter-spacing: normal;
+        color: #ffffff;
+    }
+
+    .escalations-copy {
+        font-family: Arial;
+        font-size: 25px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.72;
+        letter-spacing: normal;
+        color: #ffffff;
+    }
+
+    .escalations-text {
+        font-family: Arial;
+        font-size: 18px;
+        font-weight: 600;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.25;
+        letter-spacing: normal;
+        padding: 10px;
+        color: #ffffff;
+    }
+
+    .project-burndown-copy {
+        font-family: FreightDispPro-Regular;
+        font-size: 25px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.72;
+        letter-spacing: normal;
+        color: #4a4a4a;
+    }
+
+    .project-burndown-text {
+        font-family: Arial;
+        font-size: 16px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.25;
+        letter-spacing: normal;
+        color: #4a4a4a;
+    }
+
+    .key-takeaways {
+        font-family: Arial;
+        font-size: 15px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 2.87;
+        letter-spacing: 2.3px;
+        text-align: center;
+        color: #ffffff;
+    }
+
+    a {
+        color: #54b4cf;
+    }
+
+    ul {
+        margin: 0 !important;
+        padding: 0 20px;
+        -webkit-margin-before: 0 !important;
+        -webkit-margin-after: 0 !important;
+    }
+
+    @media only screen and (max-device-width: 600px), only screen and (max-width: 600px) {
+
+        .h1 {
+            font-family: FreightDispPro-Regular;
+            font-size: 40px !important;
+            font-weight: bold;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.23;
+            letter-spacing: normal;
+            text-align: center;
+            color: #252525;
+        }
+
+        .h2 {
+            font-family: Arial;
+            font-size: 40px !important;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: normal;
+            letter-spacing: normal;
+            text-align: center;
+            color: #252525;
+        }
+
+        .footercopy {
+            font-family: Arial;
+            font-size: 20px !important;
+            font-weight: 500;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.12;
+            letter-spacing: normal;
+            text-align: center;
+            color: #c1ccce;
+        }
+
+        .takeaways {
+            font-family: Arial;
+            font-size: 20px !important;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.44;
+            letter-spacing: normal;
+            color: #ffffff;
+        }
+
+        .escalations-copy {
+            font-family: Arial;
+            font-size: 30px !important;
+            font-weight: 500;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.72;
+            letter-spacing: normal;
+            color: #ffffff;
+        }
+
+        .escalations-text {
+            font-family: Arial;
+            font-size: 22px !important;
+            font-weight: 600;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.25;
+            letter-spacing: normal;
+            padding: 10px;
+            color: #ffffff;
+        }
+
+        .project-burndown-copy {
+            font-family: FreightDispPro-Regular;
+            font-size: 30px !important;
+            font-weight: bold;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.72;
+            letter-spacing: normal;
+            color: #4a4a4a;
+        }
+
+        .project-burndown-text {
+            font-family: Arial;
+            font-size: 20px !important;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.25;
+            letter-spacing: normal;
+            color: #4a4a4a;
+        }
+
+        body[yahoo] .hide {
+            display: none !important;
+        }
+
+        body[yahoo] .buttonwrapper {
+            background-color: transparent !important;
+        }
+
+        body[yahoo] .button {
+            padding: 0px !important;
+        }
+
+        body[yahoo] .button a {
+            background-color: #e05443;
+            padding: 15px 15px 13px !important;
+        }
+
+        body[yahoo] .unsubscribe {
+            display: block;
+            margin-top: 20px;
+            padding: 10px 50px;
+            background: #2f3942;
+            border-radius: 5px;
+            text-decoration: none !important;
+            font-weight: bold;
+        }
+    }
+
+    /*@media only screen and (min-device-width: 601px) {
+      .content {width: 600px !important;}
+      .col425 {width: 425px!important;}
+      .col380 {width: 380px!important;}
+      }*/
+</style>
 </html>
